package com.company;

public class Casilla {

    public Pieza pieza;

    public Pieza getPieza() {
        return pieza;
    }

    public void setPieza(Pieza pieza) {
        this.pieza = pieza;
    }



}
