package com.company;

public enum Color {
    BLANCO, NEGRO;
}
