package com.company;

public class RegistrarMovimientoExcepcion extends Exception {
    public RegistrarMovimientoExcepcion(String message) {
        super(message);
    }
}
