@startuml
hide circle

class RegistrarMovimientoExcepcion{
}
class Pieza{
color: Color
}
class Casilla{
pieza: Pieza
}
class Color{
NEGRO, BLANCO
}
class Partido{
tablero: Tablero
jugadorBlancas: Jugador
jugadorNegras: Jugador
iniciar()
definirColor()
registrarMovimiento()
}
class Jugador{
enPartida: boolean
turno: boolean
nombreJugador: String
}
class Caballo
class Peon
class Alfil
class Torre
class Rey
class Reina
class Tablero{
casillas: Casilla[][]
llenarTablero()
instanciarCasillas()
imprimirTablero()
}

Tablero --> Casilla

Jugador --> Pieza


Pieza <- Color
Partido -> Jugador

Tablero <- Partido

Pieza <|-- Caballo
Pieza <|-- Torre
Pieza <|-- Peon
Pieza <|-- Alfil
Pieza <|--- Reina
Pieza <|--- Rey

Caballo ..|> IKnigthMove
Peon ..|> IStraigthUpMovement
Peon ..|> IStraigthDownMovement
Peon ..|> IDiagonalMovement
Alfil ..|> IDiagonalMovement

Torre ..|> IStraigthDownMovement
Torre ..|> IStraigthUpMovement
Torre ..|> IStraigthSideMovement

Rey ...|> AllMoves
Reina ...|> AllMoves

AllMoves --> IDiagonalMovement
AllMoves --> IStraigthSideMovement
AllMoves --> IStraigthUpMovement
AllMoves --> IStraigthDownMovement

@enduml